objects/DandB_Bankruptcy__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_Bankruptcy</relationshipLabel>
        <relationshipName>DandB_Bankruptcy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actionTypeCode__c</fullName>
        <label>actionTypeCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionTypeDesc__c</fullName>
        <label>actionTypeDesc</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>court__c</fullName>
        <label>court</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>declaredDay__c</fullName>
        <label>declaredDay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>declaredMonth__c</fullName>
        <label>declaredMonth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>declaredYear__c</fullName>
        <label>declaredYear</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dischargeAnnulmentDay__c</fullName>
        <label>dischargeAnnulmentDay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dischargeAnnulmentMonth__c</fullName>
        <label>dischargeAnnulmentMonth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dischargeAnnulmentYear__c</fullName>
        <label>dischargeAnnulmentYear</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proceedingsDay__c</fullName>
        <label>proceedingsDay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proceedingsMonth__c</fullName>
        <label>proceedingsMonth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proceedingsNumber__c</fullName>
        <label>proceedingsNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proceedingsYear__c</fullName>
        <label>proceedingsYear</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segId__c</fullName>
        <label>segId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <label>sequence</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>DandB_Bankruptcy</label>
    <nameField>
        <label>DandB_Bankruptcy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_Bankruptcy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>